Fix fitguide modal alignment issue

--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -602,3 +602,7 @@
         opacity: 1;
     }
 }
+
+.pdp-fitguide-modelbox {
+    text-align: left;
+}
